@@ -2,7 +2,7 @@
 
 ~media-gfx/cls-themes-10.9 amd64 x86
 
-=sys-apps/calculate-9999 amd64 x86
+~sys-apps/calculate-1.4.0_p20100825 amd64 x86
 ~sys-apps/calculate-install-2.2.0.0_p20100812 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100813 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100813 amd64 x86
