@@ -1,5 +1,6 @@
 DIST calculate-1.3.12.tar.bz2 170338 RMD160 d2b4ebee602ac05d9752bd52335c3318db440638 SHA1 1d361bcb53efc73684dffcca972987354ae237f8 SHA256 34d073fcb977bfdc8e8e38354a5171a9db9dcb65ec00ade10bba7ae302968d8f
 EBUILD calculate-1.3.12.ebuild 1712 RMD160 f066b6db680402c8e148d78bed0157b523a006d0 SHA1 583da9f51beb3e96109e1cbc4a53932eea4b6417 SHA256 9fb996e422c9439a1c880bbc8373a39b317381d1dc21336e164ad07db48ff1e1
+EBUILD calculate-1.4.0_p20100824.ebuild 1646 RMD160 9c95f5a58e63c20c739f65e483339415e76f5e3f SHA1 58daf819f2da68bf3c2c460c34d21a2bde910969 SHA256 debc317d50fedbd0105176f2667e1824bbc8e2528f56c113d3f71178335f8c30
 EBUILD calculate-9999.ebuild 1606 RMD160 2dfb7382650af0470f4db0bcbf5b73a4b0b90e97 SHA1 d00467849ddc18f7cb67082dc9ac2b55489e2067 SHA256 a1546b9a24820ede098ad0dbd5230f7a2bce3f3c95a6135cc6af7f086eee2f9e
-MISC ChangeLog 1888 RMD160 5ddf7e39ac0b9a98aab75ab79f201d612435ff98 SHA1 39d9bdbc1b858c735362e35ec6aa9f1ad3c081c6 SHA256 80e00d7ef448a549e979652e203396d5b56308af65e070063863e9ea3113e574
+MISC ChangeLog 2063 RMD160 1fbd35872e33a1b6a9250006e62106f607308e64 SHA1 2db24011f5c8d2b361f3ca4bd3a719b32df0eebb SHA256 81f1117ce8ce2f92935b54653e38b59b7fdcc346a18b64625997781555bd5e38
 MISC metadata.xml 301 RMD160 2b89953e755d47fdc10f6def8e9d30975ed5aba1 SHA1 fa349945c077ca3d0fd95693f04a60f2da15f467 SHA256 074eff7c846f7fc8f0e74e0d992bdda9432164f28c0f3cf8991a1e59aac38700
