@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-1.4.0_p20100824 (25 Aug 2010)
+
+  25 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-1.4.0_p20100825.ebuild:
+  Daily ebuild of calculate-1.4.0.
+
   10 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-1.3.12.ebuild, calculate-9999.ebuild:
   Change depends.
